# zelos

./: Cargo.toml  README.md
.github/workflows/: rust.yml
data/: zelos.desktop
src/: gui.rs  gui_gtk.rs  main.rs
