[package]
name = "zelos"
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "A simple command line tool to overclock Nvidia GPUs using the NVML library on Linux. This supports both X11 and Wayland."
repository = "https://github.com/Kombatant/zelos"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
clap_complete = "4.5.8"
nvml-wrapper = "0.11.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sudo2 = "0.2.1"
which = "7.0.3"

# Optional GTK4 GUI feature. Requires system GTK4 dev libraries.
gtk4 = { package = "gtk4", version = "0.6", optional = true }

# Libadwaita for a modern GNOME/Adwaita UI on top of GTK4.
libadwaita = { package = "libadwaita", version = "0.4", optional = true }

[features]
default = []
gui = ["gtk4", "libadwaita"]
